--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,23 @@
-#threejs-canvas {
-    border: 1px solid #ccc;
-    margin-top: 20px;
+
+
+#threejs-canvas
+{
+  border: 1px solid #ccc;
+  margin-top: 20px;
 }
-#save-model-data {
-    margin-top: 10px;
-    padding: 10px 20px;
-    background: #0073aa;
-    color: #fff;
-    border: none;
-    cursor: pointer;
+
+#save-model-data
+{
+  margin-top: 10px;
+  padding: 10px 20px;
+  background: #0073aa;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.codes_scene
+{
+  display: flex;
+  justify-content: center;
 }
